2004-09-19  Dov Grobgeld  <dov@orbotech.com>

	* giv/giv.c: Fixed chopping of path.

	* giv/giv.c: Made parser ignore carage return characters.

	* Bumped version to 0.3.11.

	* giv/giv.c: Fixed warning when setting zoom range.

	* giv/giv.c: Fixed segfault when reading $image attributes
	from mark files.

2004-05-30  Dov Grobgeld  <dov.grobgeld@weizmann.ac.il>

	* Fixed error in loading of image from stdin.

2004-05-18  Dov Grobgeld  <dov.grobgeld@weizmann.ac.il>

	* Updated sources to reflect my new email address.

2004-05-16  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Released new version 0.3.10 .

	* colormaps.[ch] : Added functionality for displaying image 
	with false color maps.

2004-03-14  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* giv.c: Fixed array out of bound when using too many colors.

	* giv_mark_tree.c: Fixed annoying problem with resizing of 
	horizontal size	of visible column when it was toggled.

2003-11-06  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Added -gotoxyz and -invert options from command line.
	
	* Added initial support for text marks. (See doc/examples.marks).

2003-11-03  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Fixed bug in fitting scale to contents.

2003-07-28  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Added support for drawing outlines of filled polygons.

	* Added support for drawing filled polygons.

	* Added scrollbars also when working with marks only.

	* Added -a option to force square aspect ratio.

2003-07-09  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Made postscript complient eps.

	* Added option to set user title to giv window through -title
	  option.

2003-07-06  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* Implemented marks tree window.

	* Implemented $marks_file command for referencing other marks
	files.

2003-06-26    <dov@imagic.weizmann.ac.il>

	* Made load image and load marks windows pop down after image load.

	* Fixed last directory problem on windows.

	* Bumped version to 0.3.5
	
